--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: go
 go:
-  - 1.3.3
+  - 1.3
+  - tip
 install:
   - go get github.com/bmizerany/assert
+script:
+  - go test
 notifications:
   email: false
