--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ go:
   - tip
 install:
   - go get github.com/bmizerany/assert
-  - go get code.google.com/p/go.tools/cmd/cover
+  - go get golang.org/x/tools/cmd/cover
   - go get github.com/mattn/goveralls
 script:
   - go test --bench=".*" -v
