--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
 language: go
 go:
-  - 1.3
   - tip
 install:
-  - go get golang.org/x/tools/cmd/cover
+  - go get code.google.com/p/go.tools/cmd/cover
   - go get github.com/mattn/goveralls
   - go get github.com/bmizerany/assert
 script:
