Add inheritedini.go and test codes

--- a/examples/data/error.ini
+++ b/examples/data/error.ini
@@ -1,4 +1,4 @@
-title=百度搜索_ipad2
+title=搜索_ipad2
 url=http://www.baidu.com/s?bs=ipad&f=8&rsv_bp=1&wd=ipad2&inputT=397
 url_md5=5844a75423cd3372e1997360bd110a25
 refer=http://www.google.com
@@ -15,3 +15,4 @@ combo=test
 version=1.0.0.1
 debug=1
 encoding=1
+inherited_from=common.ini
