Fix linux test data error. Add comments

--- a/examples/data/project3_linux.ini
+++ b/examples/data/project3_linux.ini
@@ -1,7 +1,7 @@
 local=0
 mid=c4ca4238a0b923820dcc509a6f75849b
 
-inherited_from=d:/the/path/nonexist/error.ini
+inherited_from=/the/path/nonexist/error.ini
 
 ;the following config will override the value inherited from common.ini
 product=test
